objects/DNBoptimizer__DnBExternalRecord__x.object
<CustomObject>
    <fields>
        <fullName>DNBoptimizer__PrimaryStateProvinceAbbreviation__c</fullName>
        <description>The abbreviation for the state or province where the business is physically located.</description>
        <inlineHelpText>The abbreviation for the state or province where the business is physically located.</inlineHelpText>
        <label>Primary Address State Province Abbrev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryStateProvinceName__c</fullName>
        <description>The name of the state or province where the business is physically located.</description>
        <inlineHelpText>The name of the state or province where the business is physically located.</inlineHelpText>
        <label>Primary Address State Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryStreetAddress2__c</fullName>
        <description>The second line of the address number, or post office box number, and street name where the business is located.</description>
        <inlineHelpText>The second line of the address number, or post office box number, and street name where the business is located.</inlineHelpText>
        <label>Primary Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryStreetAddress__c</fullName>
        <description>The address number, or post office box number, and street name where the business is located.</description>
        <inlineHelpText>The address number, or post office box number, and street name where the business is located.</inlineHelpText>
        <label>Primary Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryUSMetropolitanArea__c</fullName>
        <description>The name assigned to the 5-digit CBSA (Core Based Statistical Area) assigned by US Census board to denote a geographical region with a relatively high population density at its core.</description>
        <inlineHelpText>The name assigned to the 5-digit CBSA (Core Based Statistical Area) assigned by US Census board to denote a geographical region with a relatively high population density at its core.</inlineHelpText>
        <label>Primary Address US Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__Public_PrivateIndicator__c</fullName>
        <description>Indicates whether ownership of the business is public or private.</description>
        <inlineHelpText>Indicates whether ownership of the business is public or private.</inlineHelpText>
        <label>Public Private Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__RevenueTrendYear__c</fullName>
        <description>The percentage change of this item as of base year compared to the trend year.</description>
        <inlineHelpText>The percentage change of this item as of base year compared to the trend year.</inlineHelpText>
        <label>Revenue Trend Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SIC4Code1Description__c</fullName>
        <description>The primary Standard Industrial Classification (SIC) description for the business.</description>
        <inlineHelpText>The primary Standard Industrial Classification (SIC) description for the business.</inlineHelpText>
        <label>SIC4 Code 1 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SIC4Code1__c</fullName>
        <description>The primary Standard Industrial Classification (SIC) four digit code for the business.</description>
        <inlineHelpText>The primary Standard Industrial Classification (SIC) four digit code for the business.</inlineHelpText>
        <label>SIC4 Code 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SIC4Code2Description__c</fullName>
        <description>The secondary Standard Industrial Classification (SIC) description for the business.</description>
        <inlineHelpText>The secondary Standard Industrial Classification (SIC) description for the business.</inlineHelpText>
        <label>SIC4 Code 2 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SIC4Code2__c</fullName>
        <description>The secondary Standard Industrial Classification (SIC) four digit code for the business.</description>
        <inlineHelpText>The secondary Standard Industrial Classification (SIC) four digit code for the business.</inlineHelpText>
        <label>SIC4 Code 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SIC4Code3Description__c</fullName>
        <description>The tertiary Standard Industrial Classification (SIC) description for the business.</description>
        <inlineHelpText>The tertiary Standard Industrial Classification (SIC) description for the business.</inlineHelpText>
        <label>SIC4 Code 3 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SIC4Code3__c</fullName>
        <description>The tertiary Standard Industrial Classification (SIC) four digit code for the business.</description>
        <inlineHelpText>The tertiary Standard Industrial Classification (SIC) four digit code for the business.</inlineHelpText>
        <label>SIC4 Code 3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SalesVolumeReliabilityCode__c</fullName>
        <description>A code value which describes the reliability of the annual Sales Volume figure.</description>
        <inlineHelpText>A code value which describes the reliability of the annual Sales Volume figure.</inlineHelpText>
        <label>Sales Volume Reliability Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SalesVolumeReliabilityDescription__c</fullName>
        <description>A description of the reliability of the Sales Volume figure.</description>
        <inlineHelpText>A description of the reliability of the Sales Volume figure.</inlineHelpText>
        <label>Sales Volume Reliability Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SalesVolumeUSDollars__c</fullName>
        <description>The monetary value of income received from customers from the sale of the entitys goods and/or services.  This is the gross sales minus any returns, rebates/discounts, allowances for damages or shortages, shipping expenses passed on to the customer.</description>
        <inlineHelpText>The monetary value of income received from customers from the sale of the entitys goods and/or services.  This is the gross sales minus any returns, rebates/discounts, allowances for damages or shortages, shipping expenses passed on to the customer.</inlineHelpText>
        <label>Sales Volume USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SmallBusinessIndicator__c</fullName>
        <description>Indicates whether the business is designated a small business as defined by the Small Business Administration of the US government.</description>
        <inlineHelpText>Indicates whether the business is designated a small business as defined by the Small Business Administration of the US government.</inlineHelpText>
        <label>Small Business Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__StockExchange__c</fullName>
        <description>The name of the Stock Exchange on which the subject&apos;s shares are traded.</description>
        <inlineHelpText>The name of the Stock Exchange on which the subject&apos;s shares are traded.</inlineHelpText>
        <label>Stock Exchange</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__StockSymbol__c</fullName>
        <description>Text that identifies the subject at the Stock Exchange for share trading purposes, e.g., DNB.</description>
        <inlineHelpText>Text that identifies the subject at the Stock Exchange for share trading purposes, e.g., DNB.</inlineHelpText>
        <label>Stock Symbol</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SubsidiaryIndicator__c</fullName>
        <description>Indicates whether the subject record is a Subsidiary within their corporate family tree.</description>
        <inlineHelpText>Indicates whether the subject record is a Subsidiary within their corporate family tree.</inlineHelpText>
        <label>Subsidiary Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__TelephoneNumber__c</fullName>
        <description>The main phone number for the entity, including the international dialing code.</description>
        <inlineHelpText>The main phone number for the entity, including the international dialing code.</inlineHelpText>
        <label>Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__TradestyleName1__c</fullName>
        <description>The name that the entity trades under for commercial purposes although the registered legal name used for contracts and other formal situations may be another name.</description>
        <inlineHelpText>The name that the entity trades under for commercial purposes although the registered legal name used for contracts and other formal situations may be another name.</inlineHelpText>
        <label>Tradestyle Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__TradestyleName2__c</fullName>
        <description>The name that the entity trades under for commercial purposes although the registered legal name used for contracts and other formal situations may be another name.</description>
        <inlineHelpText>The name that the entity trades under for commercial purposes although the registered legal name used for contracts and other formal situations may be another name.</inlineHelpText>
        <label>Tradestyle Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__TradestyleName3__c</fullName>
        <description>The name that the entity trades under for commercial purposes although the registered legal name used for contracts and other formal situations may be another name.</description>
        <inlineHelpText>The name that the entity trades under for commercial purposes although the registered legal name used for contracts and other formal situations may be another name.</inlineHelpText>
        <label>Tradestyle Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__USTaxID__c</fullName>
        <description>The business identification number used in the United State for business registration and tax collection, also known as Federal Employer Identification Number (FEIN).</description>
        <inlineHelpText>The business identification number used in the United State for business registration and tax collection, also known as Federal Employer Identification Number (FEIN).</inlineHelpText>
        <label>US Tax ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__WebAddress__c</fullName>
        <description>The Internet URL (Uniform Resource Locator) which uniquely identifies the proprietary website of the subject or the website preferred by the subject which gives more information on the subject.</description>
        <inlineHelpText>The Internet URL (Uniform Resource Locator) which uniquely identifies the proprietary website of the subject or the website preferred by the subject which gives more information on the subject.</inlineHelpText>
        <label>Web Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__WomanOwnedIndicator__c</fullName>
        <description>When &apos;true&apos; indicates that this organization is certified as a business that is greater than 50% owned by, and whose management and daily business operations are controlled by, one or more female persons.</description>
        <inlineHelpText>When &apos;true&apos; indicates that this organization is certified as a business that is greater than 50% owned by, and whose management and daily business operations are controlled by, one or more female persons.</inlineHelpText>
        <label>Woman Owned Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__YearStarted__c</fullName>
        <description>The year in which the entity was established as a business.</description>
        <inlineHelpText>The year in which the entity was established as a business.</inlineHelpText>
        <label>Year Started</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__baseDataId__c</fullName>
        <description>Internally used: base data id</description>
        <label>Base Data ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__combined_address__c</fullName>
        <description>Internally used: combined address field</description>
        <label>Combined Address Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>D&amp;B External Record</label>
    <pluralLabel>D&amp;B External Records</pluralLabel>
</CustomObject>